# PPQSort

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classppqsort_1_1execution_1_1parallel__policy.html  classppqsort_1_1execution_1_1parallel__policy__force__branchless.html  classppqsort_1_1execution_1_1sequenced__policy.html  classppqsort_1_1execution_1_1sequenced__policy__force__branchless.html  classppqsort_1_1impl_1_1cpp_1_1TaskStack.html  classppqsort_1_1impl_1_1cpp_1_1ThreadPool.html  classppqsort_1_1impl_1_1cpp_1_1_task_stack.html  classppqsort_1_1impl_1_1cpp_1_1_thread_pool.html  codecov.yaml  cpp_2mainloop__par_8h.html  cpp_2no__atomic__ref_2partition__branchless__par_8h.html  cpp_2no__atomic__ref_2partition__par_8h.html  cpp_2partition__branchless__par_8h.html  cpp_2partition__par_8h.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_4cadc87268808fdf4fefd13361bfc117.html  dir_6510c45c5d82691c9704faab3328c66d.html  dir_9190fea1e53c897202ad134f7cf4961d.html  dir_b68f0bbe500f2343d4f2eae4e0600056.html  dir_b8ab5c6ad8196c972e3877310d1c5b95.html  files.html  index.html  mainloop_8h.html  modules.html  namespaceppqsort.html  namespaceppqsort_1_1execution.html  namespaceppqsort_1_1impl.html  namespaceppqsort_1_1impl_1_1cpp.html  namespaceppqsort_1_1impl_1_1openmp.html  namespaceppqsort_1_1parameters.html  (+24 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  tests.yml  windows.yml
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: fixtures.h  ppqsort.cpp
cmake/: CPM.cmake  tools.cmake
countSort/: README.md  count.c
documentation/: CMakeLists.txt
documentation/pages/: about.dox
include/: ppqsort.h
include/ppqsort/: bitset_partition.h  mainloop.h  parameters.h  partition.h  partition_branchless.h  sorts.h
include/ppqsort/parallel/: mainloop_par.h  partition_branchless_par.h  partition_par.h
include/ppqsort/parallel/cpp/: mainloop_par.h  mainloop_par_cpp.h  partition_branchless_par.h  partition_par.h  task_stack.h  thread_pool.h
include/ppqsort/parallel/cpp/no_atomic_ref/: partition_branchless_par.h
include/ppqsort/parallel/openmp/: mainloop_par.h  partition_branchless_par.h  partition_par.h
scripts/: build.sh  qrun_benchmark.sh  run.sh  srun_benchmark.sh
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: ppqsort.cpp  thread_pool.cpp
